<resources>
    <string name="app_name">Si-Kunir</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="webclientid">166916917269-tq733jjj6tebokov8npj7q4ptf5aaost.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Buka Menu</string>
    <string name="navigation_drawer_close">Tutup Menu</string>

    <string name="Jenis_kelamin">Jenis_kelamin</string>
    <string-array name="jenis_kelamin_array">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="title_beda_nama">Surat Beda Nama</string>
    <string name="label_nama_lengkap">Nama Lengkap</string>
    <string name="label_nik">NIK</string>
    <string name="label_ttl">TTL</string>
    <string name="label_pekerjaan">Pekerjaan</string>
    <string name="label_alamat">Alamat</string>
    <string name="label_keterangan">Keterangan</string>
    <string name="button_kirim">Kirim</string>
    <string name="desc_back_button">Tombol Kembali</string>
    <string name="text_fitur_belum_tersedia">FITUR BELUM TERSEDIA</string>

    <string-array name="agama_resmi_array">
        <item>Islam</item>
        <item>Kristen</item>
        <item>Katolik</item>
        <item>Hindu</item>
        <item>Buddha</item>
        <item>Khonghucu</item>
        <item>Kepercayaan</item>
    </string-array>

    <string-array name="status_perkawinan_array">
        <item>Belum Kawin</item>
        <item>Kawin</item>
        <item>Cerai Hidup</item>
        <item>Cerai Mati</item>
    </string-array>

    <string-array name="kewarganegaraan_array">
        <item>Pilih Kewarganegaraan</item>
        <item>WNI</item>
        <item>WNA</item>
    </string-array>

</resources>



